made outline green and hopefully fixed mobile vertical overflow

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,10 @@
   padding: 0;
 }
 
+/* * {
+  outline: 1px solid var(--lime-700);
+} */
+
 html {
   font-family: Open Sans, sans-serif;
   font-size: 16px;
@@ -18,6 +22,12 @@ html {
 
 body {
   color: var(--warmGray-950);
+}
+
+html, body {
+  overflow-x: hidden;
+  width: 100%;
+  max-width: 100vw;
 }
 
 a {
@@ -55,9 +65,10 @@ h6 {
   display: flex;
   flex-direction: column;
   width: 100%;
+  max-width: 100vw;
   min-height: 100vh;
   margin: 0 auto;
-  border: 4px solid var(--warmGray-800);
+  border: 4px solid var(--lime-700);
 }
 
 @media (min-width: 640px) {
@@ -71,6 +82,7 @@ h6 {
 
 .between-header-footer-div {
   width: 100%;
+  max-width: 100vw;
   display: flex;
   flex: 1; /* fill space between header/footer */
   flex-direction: column;
